2/2.01/manifests/deployment-app-0-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-0-http-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-0-http
  template:
    metadata:
      labels:
        app: app-0-http
    spec:
      containers:
        - name: app-0-http
          image: jylhakos/app-0-http
          ports:
          - containerPort: 3000
            name: app-0-http
