2/2.01/manifests/deployment-app-2-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-http-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2-http
  template:
    metadata:
      labels:
        app: app-2-http
    spec:
      containers:
        - name: app-2-http
          image: jylhakos/app-2-http
          ports:
          - containerPort: 3001
            name: app-2-http
