2/2.01/manifests/service-app-0.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-0-http-svc
spec:
  type: NodePort
  selector:
    app: app-0-http
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
