2/2.01/manifests/service-app-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-http-svc
spec:
  type: ClusterIP
  selector:
    app: app-2-http
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
