2/2.01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  type: ClusterIP
  selector:
    app: app-2-http
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
